@@ -1,9 +1,8 @@
+* 12/07/2012              (**Important )   Range reduction.
 * 30/06/2012              (**Normal    )   May be port should use select instead of range?
-* 29/06/2012              (**Normal    )   Short cut effects in & and |.
 * 29/06/2012              (**Normal    )   Init value of wire and regs are to be ignored.
 * 29/06/2012              (**Normal    )   Error in module parsing should result in black box.
 * 26/06/2012              (**Important )   Set up a verification environment using Design Compiler to check the elaborated design.
-* 18/06/2012              (**Normal    )   Need serious test for the range array operations.
 * 13/06/2012              (**Important )   Process of reducing Case statement in Block, SeqBlock and GenBlock.
 * 12/06/2012              (**Important )   Need serious test for Elab_empty and Elab_Const_If reduction in Block, SeqBlock and GenBlock.
 * 11/06/2012              (**Normal    )   + and - for Numbers with x or z generate asserion failures as not supported yet.
@@ -14,6 +13,8 @@
 * 18/05/2012              (**Normal    )   The list in command line env can be embedded list like concatenations in Verilog, right now only one level of strings are supported.
 
 =============
+* 12/07/2012 [18/06/2012] (Resolved    )   Need serious test for the range array operations. [seems fine right now. It will be test after range reduction anyway. ]
+* 12/07/2012 [29/06/2012] (NoFixNeeded )   Short cut effects in & and |. [further optimization is only possible after range reduction. ]
 * 11/07/2012 [17/05/2012] (Resolved    )   Need to rewrite the cmd_lexer class or use flex, not all Tcl features can be supported in current structure. 
                                            [a full tcl shell is embedded. ]
 * 11/07/2012 [18/05/2012] (NoFixNeeded )   The back_slash in cmd_lexer should be use for special char rather than complex name. [a full tcl shell is embedded. ]
